--- a/site/src/components/Header.astro
+++ b/site/src/components/Header.astro
@@ -6,7 +6,7 @@ interface Props {
 const { showDocsLink = true } = Astro.props;
 ---
 
-<header class="fixed top-0 left-0 right-0 z-50 px-4 lg:px-6 bg-background/80 backdrop-blur-md border-b border-border/50">
+<header class="fixed top-0 left-0 right-0 z-50 px-4 lg:px-6 bg-background/80 backdrop-blur-md border-b border-border/50 will-change-transform">
   <div class="container mx-auto flex items-center h-16">
     <a href="/" class="flex items-center">
       <span class="text-lg font-black text-gradient-primary">Jitzu</span>
